备份数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.password=123456
 #  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis\u914D\u7F6E\u6587\u4EF6\u6240\u5728\u8DEF\u5F84
 #  type-aliases-package: com.mmzs.springboot.common.entities    # \u6240\u6709Entity\u522B\u540D\u7C7B\u6240\u5728\u5305
 #  mapper-location
+
+spring.application.name=bakcup
+#\u5907\u4EFD\u7684\u6570\u636E\u5E93\u914D\u7F6E
+mango.backup.datasource.host=localhost
+mango.backup.datasource.userName= root
+mango.backup.datasource.password= 123456
+mango.backup.datasource.database= socks
