定时备份数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=123456
 #  mapper-location
 
 spring.application.name=bakcup
-#\u5907\u4EFD\u7684\u6570\u636E\u5E93\u914D\u7F6E
+#\u5B9A\u65F6\u5907\u4EFD\u7684\u6570\u636E\u5E93\u914D\u7F6E
 mango.backup.datasource.host=localhost
 mango.backup.datasource.userName= root
 mango.backup.datasource.password= 123456
